# wtp_dataset_destroyer

./: .gitignore  .python-version  README.md  build_all.sh  build_core.sh  build_nodes.sh  config.json  config_full.json  destroyer.py  digital_art.hcl  main.py  new_mix.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
configs/: default.hcl  default.json  full.hcl  full.json  new_full.hcl
configs/custom/: custom.md
instructions/: basic_info.md  blur.md  blure.md  canny.md  color.md  common.md  compress.md  dithering.md  halo.md  logical_operations  noise.md  pixelate.md  resize.md  saturation.md  screentone.md  shift.md  sin.md  subsampling.md
instructions/creators/: add_degradation.md
pepedd/: __init__.py
pepedd-core/: pyproject.toml
pepedd-core/pepedd/: __init__.py
pepedd-core/pepedd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pepedd/core/: __init__.py  node_register.py  pyproject.toml
pepedd/core/objects/: node_base.py
pepedd/core/pipeline/: schema.py
pepedd/nodes/: __init__.py  pyproject.toml
pepedd/nodes/blur/: __init__.py  schemas.py
pepedd/nodes/compress/: __init__.py  comp_funcs.py  comp_maps.py  compress.py  schemas.py  video.py
pepedd/nodes/dithering/: __init__.py  schemas.py
pepedd/nodes/halo/: __init__.py  schemas.py
pepedd/nodes/lines/: lines.py  lines_funcs.py  schemas.py
pepedd/nodes/resize/: __init__.py  schemas.py
pepedd/nodes/utils/: custom_random.py  validate.py
pepedd/nodes/utils/custom_blur/: box_blur.py  lens_blur.py  rkernel_blur.py
src/: constants.py  logic.py  utils.py
src/logic/: process.py
(+72 files in other folders)
